<resources>
    <string name="app_name">MyTodo</string>
    <string name="check_box">勾选框</string>
    <string name="isRecurring">为循环任务</string>
    <string name="hello">Hello ZMark!</string>
    <string name="home">主页</string>
    <string name="task_view">任务视图</string>
    <string name="my_day">我的一天</string>
    <string name="calendar_view">日历视图</string>
    <string name="four_quadrants_view">四象限视图</string>
    <string name="user_name">用户名</string>
    <string name="no_task_msg">没有任务~</string>
    <string name="add_todo_item">添加todo</string>
    <string name="search">搜索</string>
    <string name="count_down">倒计时</string>
    <string name="tasks">任务</string>
    <string name="top_menu_left_des">清单</string>
    <string name="top_menu_right_des">筛选选项</string>
    <!-- TODO 解开注释-->
    <!--    <string name="group_and_sort">分组与排序</string>-->
    <string name="group_and_sort">排序</string>
    <string name="show_or_hide_details">显示/隐藏详细信息</string>
    <string name="show_details">显示详细信息</string>
    <string name="hide_details">隐藏详细信息</string>
    <string name="group_by">分组方式</string>
    <string name="list">清单</string>
    <string name="due_date">截止日期</string>
    <string name="tag">标签</string>
    <string name="excepted_date">规划日期</string>
    <string name="priority">优先级</string>
    <string name="none">无</string>
    <string name="sort_by">排序方式</string>
    <string name="title">标题</string>
    <string name="avatar">头像</string>
    <string name="username">ZMark</string>
    <string name="enter_new_task_title">新的待办事项</string>
    <string name="description">描述</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="default_list">默认清单</string>
    <string name="setTime">设置时间</string>
    <string name="setPriority">设置优先级</string>
    <string name="setTags">设置标签</string>
    <string name="setReminder">设置提醒</string>
    <string name="setList">设置清单</string>
    <string name="default_priority">不重要不紧急</string>
    <string name="suggestion">建议</string>
    <string name="NO_TASK_IN_LIST">该清单空空如也，为它添加一些任务吧~</string>
    <string name="add_to_my_day">添加到我的一天</string>
    <string name="no_tasks_here">暂无任务~</string>
    <string name="add_description">添加描述或备注</string>
    <string name="back">返回</string>
    <string name="due_today">今天到期</string>
    <string name="repeated">重复</string>
    <string name="move">迁移</string>
    <string name="delete">删除</string>
    <string name="create_timestamp">创建时间</string>
    <string name="already_in_my_day">已添加到\"我的一天\"</string>
    <string name="add_due_date">添加截止日期</string>
    <string name="select_list">选择清单</string>
    <string name="select_sort_type">选择排序方式</string>
    <string name="plan_the_execution_time">规划执行时间</string>
    <string name="no_deadline_is_set">未设置截止日期</string>
    <string name="no_label_is_set">未设置标签</string>
    <string name="no_reminder_time_is_set">未设置提醒时间</string>
    <string name="add_title">输入标题</string>
    <string name="no_repetition">不重复</string>
    <string name="add_tag">添加标签</string>
    <string name="drag_handle">拖动手柄</string>
    <string name="addGroup">添加分组</string>
    <string name="addList">添加清单</string>
    <string name="group_name">分组名称</string>
    <string name="group_description_optional">分组描述（选填）</string>
    <string name="list_name">清单名称</string>
    <string name="manifest_description_optional">清单描述（可选）</string>
    <string name="edit_list_info">编辑清单信息</string>
    <string name="view_switching">视图切换</string>
    <string name="hide_or_show_completed_tasks">隐藏/显示已完成</string>
    <string name="hide_completed_tasks">隐藏已完成</string>
    <string name="show_completed_tasks">显示已完成</string>
</resources>