<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- 左侧圆形勾选框 -->
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/check_box" />

        <LinearLayout
            android:id="@+id/taskContentLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="0dp">

            <!-- 第一行，todoTitle -->
            <TextView
                android:id="@+id/todoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/tasks" />

            <!-- 第二行，其他信息 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <!-- 使用android:gravity="center_vertical确保垂直居中对齐-->
                <!-- 左侧，标签和到期时间 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tagLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:text="@string/tag" />

                    <TextView
                        android:id="@+id/dueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        android:text="@string/due_date" />
                </LinearLayout>

                <!-- 右侧，循环图标 -->
                <ImageView
                    android:id="@+id/recurringIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_recurring"
                    android:layout_marginStart="8dp"
                    android:visibility="gone"
                    android:contentDescription="@string/isRecurring" />
            </LinearLayout>
        </LinearLayout>

        <!-- 右侧加号 -->
        <LinearLayout
            android:id="@+id/addToMyDayLayoutButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add_blue"
                android:contentDescription="@string/add_to_my_day" />
        </LinearLayout>
    </LinearLayout>
    <!-- Bottom border view -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_gravity="bottom" />
</LinearLayout>
