<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <!-- 左侧用户名 -->
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:textColor="#000000" />

        <!-- 右侧搜索框 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="end"> <!-- 右对齐 -->
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:hint="@string/search"
                android:inputType="text"
                tools:ignore="NestedWeights" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:src="@android:drawable/ic_menu_search"
                android:layout_gravity="end" />
        </LinearLayout>
    </LinearLayout>

    <!-- 中部列表 -->
    <LinearLayout
        android:id="@+id/centerListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBarLayout"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:background="@drawable/border_background">

        <!-- 我的一天 -->
        <LinearLayout
            android:id="@+id/myDayItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_my_day" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_day"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>

        <!-- 日历视图 -->
        <LinearLayout
            android:id="@+id/calendarViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>

        <!-- 倒计时 -->
        <LinearLayout
            android:id="@+id/countdownItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_countdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_down"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>

        <!-- 任务 -->
        <LinearLayout
            android:id="@+id/allTasksItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasks"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 底部任务组 -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/taskGroupRecyclerView"
        android:layout_below="@id/centerListLayout"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_background"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:visibility="visible"
        tools:listitem="@layout/task_group_item" />
</RelativeLayout>
