<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeDefaultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/centerListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:background="@drawable/border_background">

        <!-- 我的一天 -->
        <LinearLayout
            android:id="@+id/myDayItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_my_day" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_day"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>

        <!-- 日历视图 -->
        <LinearLayout
            android:id="@+id/calendarViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>

        <!-- four_quadrants_view -->

        <!-- 倒计时 -->
        <LinearLayout
            android:id="@+id/fourQuadrantsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_four_quadrants" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/four_quadrants_view"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/countdownItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_countdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_down"
                android:textSize="20sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />
        </LinearLayout>


    </LinearLayout>

    <!-- 底部任务分组和清单 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskGroupRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/centerListLayout"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_background"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:visibility="visible"
        tools:listitem="@layout/task_group_item" />
</RelativeLayout>
